fixing summary page friend issue

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -145,7 +145,7 @@
 				<td class='comments center b-r'> {{entry.weeklyComments }} </td>
 				<td class='notifications right b-r'> {{ entry.notifications }} </td>
 				<td class='last-not-timestamp right timeago b-r' title='{{ entry.lastNotifSent }}'> </td>
-				<td class='friends b-r center'> {{ entry.ffriends}} | {{ entry.rfriends}} </td>
+				<td class='friends b-r center'> {{ entry.ffriendCount}} | {{ entry.rfriendCount}} </td>
 				<td class='contacts b-r center'> {{ entry.contactCount }} </td>
 				<td class='last-build b-r'> {{ entry.build }} </td>
 				<!--<td class='last-uploaded-timestamp timeago b-r' title="{{ entry.lastUploadTime }}"> </td>-->
